WRP-2674 fixinf of alignment issues in taxonomy

--- a/app/styles/editpanel.scss
+++ b/app/styles/editpanel.scss
@@ -20,8 +20,7 @@
     margin-bottom: 0px;
     width: 100%;
 }
-tab-pane.active .no-padding.col-md-9,
-.angular-ui-tree-node,
+tab-pane.active .no-padding.col-md-9
 {
     line-height: 12px;
     font-size: 12px;
